objects/Case_Task__c.object
<CustomObject>
    <fields>
        <fullName>Account_Customer_Acc_No__c</fullName>
        <formula>CaseID__r.Account.FS_CUST_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Acc No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Main_City__c</fullName>
        <formula>CaseID__r.Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Main City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Main_Country__c</fullName>
        <formula>CaseID__r.Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Main Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Main_State_Province__c</fullName>
        <formula>CaseID__r.Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Main State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Main_Street__c</fullName>
        <formula>CaseID__r.Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Main Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Main_Zip_Postal_Code__c</fullName>
        <formula>CaseID__r.Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Main Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Faulty_Qty__c</fullName>
        <label>Actual Faulty Qty</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Tasks</relationshipLabel>
        <relationshipName>Case_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Case_Customer_Contact__c</fullName>
        <formula>CaseID__r.Contact.FirstName&amp;&apos; &apos;&amp; CaseID__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Customer Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Customer_Number__c</fullName>
        <description>Used in Mail Merge.</description>
        <formula>CaseID__r.Account.FS_Site_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Customer_Order_No__c</fullName>
        <formula>CaseID__r.Customer_PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Customer Order No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Customer_Ref__c</fullName>
        <formula>CaseID__r.Customer_Ref__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Customer Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Customer__c</fullName>
        <formula>CaseID__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Date_Complete__c</fullName>
        <formula>CaseID__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Date Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Date_Opened__c</fullName>
        <formula>CaseID__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Item_No__c</fullName>
        <formula>CaseID__r.Our_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Item No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Order_No__c</fullName>
        <formula>CaseID__r.Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product_Type__c</fullName>
        <formula>CaseID__r.Product_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Qty_Affected__c</fullName>
        <formula>CaseID__r.QueriedQty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Qty Affected</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_S_O_Reference__c</fullName>
        <formula>CaseID__r.Batch_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case S/O Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>CaseID__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Containment_Action__c</fullName>
        <label>Containment Action</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <inlineHelpText>Max 32, 768 Chars</inlineHelpText>
        <label>Corrective Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_to_Replace_Material__c</fullName>
        <label>Cost to Replace Material</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_to_return_Samples__c</fullName>
        <label>Cost to return Samples</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Reference__c</fullName>
        <label>Credit Note Reference</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <label>Date Required</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investigated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Details__c</fullName>
        <label>Investigation Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Date__c</fullName>
        <label>Manufactured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preventative_Action__c</fullName>
        <label>Preventative Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Cost__c</fullName>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Tear Tape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extrusion Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porous Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaflets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD General Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Electrical &amp; Fasteners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Tapes and POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Security Seals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Printer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Access Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Hose Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD MRO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_Department__c</fullName>
        <label>Responsible Department</label>
        <picklist>
            <controllingField>Product_Group__c</controllingField>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting &amp; Creasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glueing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guillotine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Packing / Sorting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slitting / rewind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Despatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transapotatin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Case Tasks</relationshipLabel>
        <relationshipName>Case_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Sites__c</fullName>
        <label>Responsible Site</label>
        <picklist>
            <controllingField>Product_Group__c</controllingField>
            <picklistValues>
                <fullName>Banbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicopee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darmstadt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greensboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jarrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jordan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxembourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nottingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinbek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Couse__c</fullName>
        <label>Root Cause</label>
        <picklist>
            <controllingField>Product_Group__c</controllingField>
            <picklistValues>
                <fullName>Backing Paper Left On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggy Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coat Weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coating Condensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compatibility Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Tooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defective Or Worn Blade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handling Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handling Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrectly Rewound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Silicone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Adhesive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movement During Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pile Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Execution Of Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Issue / Poor Colour Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Wrong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedure / Instruction Not Followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramp Up/Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silicone Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splice / Flag Left In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winding Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Samples_Returned__c</fullName>
        <label>Samples Returned</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Customer Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – Unjustified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Value_of_Credit__c  + Price_Cost__c + Cost_to_return_Samples__c+ Cost_to_Replace_Material__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM__c</fullName>
        <formula>TEXT(CaseID__r.UM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Credit__c</fullName>
        <label>Value of Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Task</label>
    <nameField>
        <displayFormat>C{000000000}</displayFormat>
        <label>Case Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Tasks</pluralLabel>
    <recordTypes>
        <fullName>Acknowledge_Complaint</fullName>
        <active>true</active>
        <description>Create this task to track acknowledgement of the complaint with the customer</description>
        <label>1. Acknowledge Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complete_Investigation</fullName>
        <active>true</active>
        <description>Create this task to assign and track the investigation of this complaint</description>
        <label>2. Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investigate</fullName>
        <active>true</active>
        <description>Create this task to assign and track the investigation of this complaint</description>
        <label>2. Investigate (Mandatory)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Respond_to_Customer</fullName>
        <active>true</active>
        <description>Create this task to track response to customer</description>
        <label>4. Respond to Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3_Cost_Detail</fullName>
        <active>true</active>
        <description>Cost Detail</description>
        <label>3. Cost Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Acknowledge_Complaint</fullName>
        <active>true</active>
        <description>Acknowledge Complaint</description>
        <errorConditionFormula>AND ( RecordType.Name =&quot;1. Acknowledge Complaint&quot; , CaseID__r.Acknowledge_Complaint__c =true, isnew())</errorConditionFormula>
        <errorMessage>An Acknowledge Complaint Task already exists for this case. 
Please update the existing task instead of creating another one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Detail</fullName>
        <active>true</active>
        <description>Investigate (Mandatory)</description>
        <errorConditionFormula>AND ( RecordType.Name =&quot;3. Cost Detail&quot;,   CaseID__r.Cost_Detail__c  =true,isnew())</errorConditionFormula>
        <errorMessage>Cost Detail Task already exists for this case. 
Please update the existing task instead of creating another one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Investigate_Complaint</fullName>
        <active>true</active>
        <description>Investigate (Mandatory)</description>
        <errorConditionFormula>AND ( RecordType.Name =&quot;2. Investigate (Mandatory)&quot; ,  CaseID__r.Investigating__c =true,isnew())</errorConditionFormula>
        <errorMessage>An Investigate Complaint Task already exists for this case. 
Please update the existing task instead of creating another one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Respond_to_Customer</fullName>
        <active>true</active>
        <description>Investigate (Mandatory)</description>
        <errorConditionFormula>AND ( RecordType.Name =&quot;4. Respond to Customer&quot;,    CaseID__r.Respond_to_Customer__c  =true,isnew())</errorConditionFormula>
        <errorMessage>Respond to Customer Task already exists for this case. 
Please update the existing task instead of creating another one.</errorMessage>
    </validationRules>
</CustomObject>